Оптимизация множественных http запросов к биржам, инициализация бирж при запуске